# nix/nexxera/nix/api.py
@@ -1,5 +1,7 @@
 
+
 _DB_USERS = []
+_DB_TRANSACTIONS = []
 
 
 def ping():
@@ -13,10 +15,10 @@ def delete_users():
 def post_users(body):
     from .schema import NixUser
 
-    user = NixUser(body)
-    _DB_USERS.append(user)
-    user.id = len(_DB_USERS)
-    return user.to_native(), 201
+    obj = NixUser(body)
+    _DB_USERS.append(obj)
+    obj.id = len(_DB_USERS)
+    return obj.to_native(), 201
 
 
 def get_users():
@@ -30,15 +32,45 @@ def get_user(uid):
     return []  # TODO: Not found error.
 
 
+def delete_transactions():
+    _DB_TRANSACTIONS.clear()
+
+
 def get_transactions():
-    return 'GET transactions'
+    return [
+        i.to_native()
+        for i in _DB_TRANSACTIONS
+        if not i.deleted
+    ]
 
 
 def get_transaction(tid):
-    return f'GET transation: {tid}'
+    return ""
 
 
-def post_transaction(message):
-    return 'POST transaction'
+def post_transaction(body):
+    from .schema import NixTransaction
+
+    obj = NixTransaction(body)
+    _DB_TRANSACTIONS.append(obj)
+    obj.id = len(_DB_TRANSACTIONS)
+    return obj.to_native(), 201
 
 
+def delete_transaction(tid):
+    obj = _get_transaction(tid)
+    if obj is None:
+        return '', 404
+
+    for i, i_transaction in enumerate(_DB_TRANSACTIONS):
+        if i_transaction.id == tid:
+            i_transaction.deleted = True
+
+    return '', 200
+
+
+def _get_transaction(tid):
+    for i_transaction in _DB_TRANSACTIONS:
+        if i_transaction.id == tid:
+            return i_transaction
+    return None
